--- a/contactpage.html
+++ b/contactpage.html
@@ -874,7 +874,7 @@
                         <label for="message">Your Message</label>
                         <textarea id="message" name="message" required></textarea>
                     </div>
-                    <button type="submit" class="submit-btn">Send Message <i class="fas fa-paper-plane"></i></button>
+                    <button type="submit" class="submit-btn"><a href="mailto:contact@yantraai.in" style="text-decoration: none; color:white;">Send Message</a> <i class="fas fa-paper-plane"></i></button>
                 </form>
             </div>
             
