--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
         .partners-section {
             padding: 60px 0;
-            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(8, 47, 69), rgb(8, 18, 29));
+            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(9, 25, 34), rgb(8, 18, 29));
             text-align: center;
             overflow: hidden;
         }
@@ -411,7 +411,7 @@
         }
 
         .value-proposition-section {
-            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(8, 47, 69), rgb(8, 18, 29));
+            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(9, 25, 34), rgb(8, 18, 29));
             color: white;
             padding: 80px 20px;
         }
@@ -582,7 +582,7 @@
         }
 
         .vision-platform {
-            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(8, 47, 69), rgb(8, 18, 29));
+            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(9, 25, 34), rgb(8, 18, 29));
             color: white;
             padding: 80px 20px;
         }
@@ -805,7 +805,7 @@
         }
 
         .achievements {
-            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(8, 47, 69), rgb(8, 18, 29));
+            background-image: radial-gradient(circle, rgb(17, 76, 80),  rgb(9, 25, 34), rgb(8, 18, 29));
             padding: 80px 20px;
             text-align: center;
             color: white;
@@ -897,7 +897,7 @@
             border-radius: 6px;
             font-size: 1em;
             background: rgb(255, 255, 255);
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .terms-container {
